2017-06-22  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-external-view-temp-directory): New user option.
	(w3m-external-view): Use it control which directory files are saved to
	before being opened with the external viewer.  [emacs-w3m:12708]

2017-06-20  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-goto-url-new-session): Handle POST data.
	[emacs-w3m:12704]

2017-06-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-url, w3m-cookie-domain, w3m-cookie-secure)
	(w3m-cookie-name, w3m-cookie-value, w3m-cookie-path)
	(w3m-cookie-version, w3m-cookie-expires, w3m-cookie-ignore): Add docs.
	(w3m-cookie): Test w3m-use-cookies here insted.
	(w3m-about-cookie): Don't test it.  [emacs-w3m:12699]

2017-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Simplify the tweaking of `message'.

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-clear): Make it a user command.
	(w3m-cookie): Open it as a new session ([emacs-w3m:12685]).

	* w3m.el (w3m-select-buffer-delete-buffer): Don't move point forward
	([emacs-w3m:12684]); clarify doc string.

	* w3m-filter.el (w3m-filter-rt): Bind ephemeral var ([emacs-w3m:12682]).

2017-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-rt, w3m-filter-slashdot):
	Update ([emacs-w3m:12678]).

2017-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-compile-file): Silence compile warnings when
	compiling w3m-filter.el ([emacs-w3m:12676]).

2017-06-11  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-delete-regions, w3m-filter-replace-regexp):
	Make a return value always mean deletion or replacement is made
	([emacs-w3m:12674]).

2017-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-delete-regions, w3m-filter-replace-regexp):
	Refactor to Lisp macros.
	(w3m-filter-geocities-remove-garbage, w3m-filter-infoseek-remove-ads)
	(w3m-filter-ascii24-remove-ads): New filters that replace the ones